disabled extensions and updated chat-ui

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,12 @@
 __pycache__/
 *.creds
 .env
-models/
+webui/nesa/models/
+webui/models
+webui/loras
+webui/logs
+webui/installer_files
+webui/docs
+webui/extensions
+webui/docker
+webui/characters
